{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "f287685b-9244-4fd8-aa09-632f4862a451",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0f22c04d-bd8f-4a23-87eb-1be5fa0bb24a",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "ee030df0-94a5-47d0-93f7-d1192dd07993",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1d526a51-1964-403a-a496-fbfcedc4f15e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "PlayerController",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c938835-8d87-49e0-a103-a67d7f1756d9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone,InvertVector2(invertX=false)",
                    "groups": "PlayerController",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerController",
            "bindingGroup": "PlayerController",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}